--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class=l style="margin-left:0;">$1 face 
     <input type="radio" id="junk" name="type" value=".715" checked><label for="html">junk</label>
     <input type="radio" id="doll" name="type" value=".7734"><label for="html">dollar</label>
-    <input type="radio" id="bull" name="type" value="1"><label for="html">bullion</label></div>
+    <input type="radio" id="bull" name="type" value="1"><label for="html">bullion</label>
     <input type="radio" id="mbox" name="type" value="500"><label for="html">mbox</label></div><br>
   <div class="l"><label for="price">Price: </label>
     <input id="price" inputmode="numeric" pattern="[0-9]*" type="text" autocomplete="off" onfocus="this.select();" value=""></div>
