--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="l">ozt:<div id="troy_ounce">2.1</div></div>
   <div class="r">Total:<div id="grand_total"></div></div></td></tr>
 <tr><td colspan="7"><hr><div id="prem-hd">Premiums</div><br><hr>
-  <div class=l style="margin-left:0;">$1 face 
+  <div class=l style="margin-left:0;text-align:left;">$1 face 
     <input type="radio" id="junk" name="type" value=".715" checked><label for="html">junk</label>
     <input type="radio" id="doll" name="type" value=".7734"><label for="html">dollar</label>
     <input type="radio" id="bull" name="type" value="1"><label for="html">bullion</label>
