--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     }
     hr {margin:5px 0;}
     div, h2 {display: inline-block;}
+    h2 {margin:30px 0;}
     .l {float: left;}
     .r {float: right;}
-    .a {padding:0 0 0 25px !important;}
-    .h {align:right;}
+    .a {padding:0 0 0 5px !important;}
+    /*.h {align:right;}*/
     #qua, #dim {color: black;}
     #face_total, #troy_ounce, #grand_total {padding: 0 10px;}
     #price, #prem {margin-top: 5px;}
@@ -57,6 +58,8 @@
     #rnd,         #ken         {background-color: #F0F0F0;}
     #rnd.toggled, #ken.toggled {background-color: #F8C8DC;}
     #fbp, #date,  #dollar      {font-size: 12px; text-decoration: none; color:#551A8B;}
+    #nick {border-radius:50%; border:1px solid #ddd; padding:5px; margin-right:40px; cursor: default;}
+    #nick.toggled {background-color: #F8C8DC;}
     @media only screen and (max-width: 500px) {
       #premium {width:16px; height:16px;}
     }
@@ -64,7 +67,8 @@
 </head>
 <body><div id="container">
 <table>
-<tr><td colspan="6"><h2 class=h>Silver Barter</h2></div></td>
+<tr><!--td><a id=nick>5¢</a></td-->
+    <td colspan="6"><a id=nick>5¢</a><h2>Silver Barter</h2></td>
     <td class=a>
   <a id="dollar" href="javascript:setSpot();">$28 Spot Price</a><br>
   <a id="date" href="javascript:getSpot();">Get Spot Price</a><br>
@@ -108,6 +112,12 @@ let spot, amt, troy = .715, db = {
     "dime": {"fract": .10, "count": 0, "price": 0, "total": 0}, 
     "nick": {"fract": .05, "count": 0, "price": 0, "total": 0}  // no 90% nickels; a nickel is the LCD
   },
+  count = () => 28*db["dolr"]["count"]
+              + 10*db["half"]["count"]
+              +  5*db["quar"]["count"] 
+              +  2*db["dime"]["count"];
+
+  nick = document.getElementById("nick"),
   silver = document.getElementById("spot"),
   gold = document.getElementById('gold'),
   buy = document.getElementById("amt"),
@@ -248,12 +258,15 @@ function render(){ console.trace();
   }else{
     db["dolr"]["count"]  = 0;
   }
-
+  if(db["dolr"]["count"] > 0 && db["nick"]["count"] < 4 && db["nick"]["count"] % 2 != 0){
+     db["dolr"]["count"] -= 1;
+     db["nick"]["count"] += 28;
+  }
   db["quar"]["count"]  = Math.floor(db["nick"]["count"] / 5); 
   db["nick"]["count"] -= Math.floor(db["quar"]["count"] * 5);
   if(db["quar"]["count"] > 0 && db["nick"]["count"] % 2 != 0){
-    db["quar"]["count"] -= 1;
-    db["nick"]["count"] += 5;
+     db["quar"]["count"] -= 1;
+     db["nick"]["count"] += 5;
   }
   db["dime"]["count"]  = Math.floor(db["nick"]["count"] / 2);  
   db["nick"]["count"] -= Math.floor(db["dime"]["count"] * 2);
@@ -278,7 +291,7 @@ for(let i = 0; i < e.length; i++){
     } 
     face.innerHTML = (n - db["dolr"]["count"] * (db["dolr"]["fract"] -1)).toFixed(2);     
     ozt.innerHTML = (n * troy).toFixed(2);  
-    buy.value = Math.floor(parseFloat(grand_total.innerHTML)+1).toFixed(2);   
+    buy.value = (count() * spot * troy * .05 + .01).toFixed(2);
   });
 };
 
@@ -340,16 +353,29 @@ premium.addEventListener('click', function (event) {
 });
 rnd.addEventListener('click', function (event) {
   event.target.className = 'toggled' == event.target.className ? '' : 'toggled';
+  buy.value = (count() * spot * troy * .05 + .01).toFixed(2);
   render();
 });
 ken.addEventListener('click', function (event) {
   event.target.className = 'toggled' == event.target.className ? '' : 'toggled';
+  buy.value = (count() * spot * troy * .05 + .01).toFixed(2);
   render();
 });
 function setSpot(){
   silver.value = 27.972;
   render();
 };
+nick.addEventListener('click', function (event) {
+  if(nick.className == 'toggled'){
+     nick.className = '';
+     buy.value = ((count() - 1) * spot * troy * .05 + .01).toFixed(2);
+  }else{
+     nick.className = 'toggled';
+     buy.value = ((count() + 1) * spot * troy * .05 + .01).toFixed(2);
+  }
+  nick.blur();
+  render();
+});
 /*
   https://stackoverflow.com/questions/114543/how-can-i-horizontally-center-an-element
   https://codepen.io/alexandredees/pen/DbXggK
